--- a/Fabflix/Project1/web/movieList.html
+++ b/Fabflix/Project1/web/movieList.html
@@ -23,32 +23,62 @@
 </head>
 <body>
 
-<div class="dropdown">
-    <button class="dropbtn">Content</button>
-    <div class="dropdown-content">
-        <a href="index.html">MovieList</a>
-    </div>
-</div>
 <h1>Movies</h1>
 
-<!-- Id "star_table" is useful for jQuery to find the html element with id, class here is mapping to Bootstrap defined class CSS -->
+<nav class="navbar navbar-expand-sm bg-body navbar-light">
+    <a class="navbar-brand" href = "mainPage.html">Fabflix</a>
+
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="shoppingCart.html">Cart</a>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                SortV1
+            </a>
+            <div class="dropdown-menu" id = "s1">
+
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                SortV2
+            </a>
+            <div class="dropdown-menu" id = "s2">
+
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id = "dropPages">
+            </a>
+            <div class="dropdown-menu" id = finalPages>
+            </div>
+        </li>
+
+    </ul>
+</nav>
+
+<p id="upper_page" align = "center"></p>
+
 <table id=movie_table class="table table-striped tableSize">
-    <!-- Create a table header -->
     <thead>
     <tr>
-        <!-- Titles of each column-->
         <th>Title</th>
         <th>Year</th>
         <th>Director</th>
-        <th>Genres</th>
         <th>Stars</th>
+        <th>Genres</th>
         <th>Rating</th>
+        <th></th>
     </tr>
     </thead>
     <!-- Table body is left empty here, will be populated with the data retrieved with index.js -->
     <!-- Again, id "star_table_body" is useful for jQuery to find this html element -->
     <tbody id=movieList_table_body></tbody>
 </table>
+
+<p id="lower_page" align = "center"></p>
 
 <!-- Load jQuery and Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -59,7 +89,7 @@
 <!-- The path is relative to index.html, since these two files are in the same directory -->
 <!-- Note the url does not contain a "/" in the beginning, which means the url is relative to current path
      otherwise the url is relative to the root path-->
-<script src="index.js"></script>
+<script src="movieList.js"></script>
 </body>
 
 
