--- a/Fabflix/Project1/web/singleStar.html
+++ b/Fabflix/Project1/web/singleStar.html
@@ -18,24 +18,36 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
     <title>Single Star</title>
 </head>
 <body>
-<div class="dropdown">
-    <button class="dropbtn">Content</button>
-    <div class="dropdown-content">
-        <a href="index.html">MovieList</a>
-    </div>
-</div>
+<nav class="navbar navbar-expand-sm bg-body navbar-light">
+    <a class="navbar-brand" href = "mainPage.html">Fabflix</a>
+
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="shoppingCart.html">Cart</a>
+        </li>
+
+        <li class="nav-item" id = "jump_func">
+
+        </li>
+
+    </ul>
+</nav>
 <h1>Single Star Page</h1>
 
 <!-- H3 body is left empty here, will be populated with the data retrieved with single-star.js -->
 <!-- single-star.js will find this html element by it's id "star_info" -->
 <h3 id= "star_info"></h3>
+<p id = shopButton></p>
 <table id=movie_table class="table table-striped">
     <thead>
     <tr>
         <th>Movie Title</th>
+        <th>Year</th>
     </tr>
     </thead>
 
