--- a/Fabflix/Project1/web/login.html
+++ b/Fabflix/Project1/web/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <title>Login to Fablix</title>
 </head>
 <body>
@@ -27,6 +27,7 @@
     </label>
     <br>
     <input type="submit" value="Login">
+    <div class="g-recaptcha" data-sitekey="6LehN8UaAAAAAKmGotzRDDB2aPavF7sppXRFu8Xa"></div>
 </form>
 
 <div id="login_error_message"></div>
