final without XML

--- a/Fabflix/Project1/web/mainPage.html
+++ b/Fabflix/Project1/web/mainPage.html
@@ -53,6 +53,7 @@
         <li class="nav-item">
             <a class="nav-link" href="checkoutPage.html">Checkout</a>
         </li>
+        <li class="nav-item" id = "dashboardInfo"></li>
 
     </ul>
 </nav>
