--- a/Fabflix/Project1/web/mainPage.html
+++ b/Fabflix/Project1/web/mainPage.html
@@ -58,6 +58,13 @@
     </ul>
 </nav>
 
+<div class="container">
+    <h2>Search</h2>
+    <input type="text" name="hero" id="autocomplete"
+           class="autocomplete-searchbox form-control"
+           placeholder="Search"/>
+</div>
+
 <form name = "search_form" method = "get" action = "movieList.html">
 
     <p><b>Title:</b></p>
@@ -95,13 +102,14 @@
 
 </form>
 
-<p id = "genre_list"></p>
+
 
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.7/jquery.autocomplete.min.js"></script>
 
 <script src="mainPage.js"></script>
 
